#44 optimization of JUnit dependencies